--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 /*----------------------------------------
 SOBREESCRIBIENDO  LOS ESTILOS DE BOOTSTRAP
 ------------------------------------------*/
@@ -75,5 +76,43 @@ p {
 
   #wrapper.toggled #sidebar-wrapper {
     margin-left: -15rem; } }
+    
 
+/*estilos de la vista registro del adulto mayor*/
+/*importando estilos*/
+.bg-tercero {
+  background-color: gray !important;
+}
+.bg-form {
+  background-color: rgba(209, 209, 209, 0.255) !important;
+  border-color: rgb(0, 0, 0);
+}
+.form-check-label{
+  font-family:'Montserrat', sans-serif;
+  font-weight:bold;
+  font-size:smaller;
+}
+label{
+  font-family:'Montserrat', sans-serif;
+  font-weight:bold;
+  font-size:medium;
+}
+h2{
+  font-family:'Montserrat', sans-serif;
+  font-size: 1.5em;
+  font-weight: bold;
+  padding-top: 4%;
+  padding-bottom: 4%;
+}
+.form-group{
+  font-family:'Montserrat', sans-serif;
+}
+
+.btn-secondary {
+  background-color: gray !important;
+  border-color:  rgb(111, 111, 111)  !important; 
+}
+button{
+  margin-left: 10px;
+}
 /*# sourceMappingURL=estilos.css.map */
