--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -59,6 +59,12 @@ p {
     color: #8B2B16;
 }
 
+.boton1 {
+    width: 100px;
+    height: 100px;
+
+}
+
 //wrap
 #wrapper {
     overflow-x: hidden;
