--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,154 +1,87 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 /*----------------------------------------
 SOBREESCRIBIENDO  LOS ESTILOS DE BOOTSTRAP
 ------------------------------------------*/
 .bg-primary {
-  background-color: #8B2B16 !important;
-}
+  background-color: #8B2B16 !important; }
 
 .bg-tercero {
-  background-color: gray !important;
-}
+  background-color: gray !important; }
 
 .text-primary {
-  color: #8B2B16 !important;
-}
+  color: #8B2B16 !important; }
 
 .btn-primary {
   background-color: #8B2B16 !important;
-  border-color: #5f1d0f !important;
-}
+  border-color: #5f1d0f !important; }
 
 .btn-secundario {
   background-color: #b4b1b1 !important;
   border-color: #9b9797 !important;
-  font-size: 26px;
-}
+  font-size: 26px; }
 
 .btn-primary:hover {
-  background-color: #5f1d0f !important;
-}
+  background-color: #5f1d0f !important; }
 
 .btn-primary:active {
   background-color: #331008 !important;
-  border-color: #070201 !important;
-}
+  border-color: #070201 !important; }
 
 /* estilos del diseño*/
 html {
-  font-size: 14px;
-}
+  font-size: 14px; }
 
 .card:hover {
-  box-shadow: 0 0 10px #0000006b;
-}
+  -webkit-box-shadow: 0 0 10px #0000006b;
+          box-shadow: 0 0 10px #0000006b; }
 
 p {
-  display: inline-flex;
-}
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex; }
 
 .primary {
-  color: #8B2B16;
-}
+  color: #8B2B16; }
 
 .boton1 {
   width: 100px;
-  height: 100px;
-}
+  height: 100px; }
+
+.boton-inicio:hover {
+  -webkit-box-shadow: 0 0 10px #0000006b;
+          box-shadow: 0 0 10px #0000006b; }
 
 #wrapper {
-  overflow-x: hidden;
-
-}
+  overflow-x: hidden; }
 
 #sidebar-wrapper {
   min-height: 100vh;
   margin-left: -15rem;
-  transition: margin 0.25s ease-out;
-}
+  -webkit-transition: margin .25s ease-out;
+  transition: margin .25s ease-out; }
 
 #sidebar-wrapper .sidebar-heading {
   padding: 0.875rem 1.25rem;
-  font-size: 1.2rem;
-}
+  font-size: 1.2rem; }
 
 #sidebar-wrapper .list-group {
-  width: 15rem;
-}
+  width: 15rem; }
 
 #page-content-wrapper {
-  min-width: 100vw;
-}
+  min-width: 100vw; }
 
 #wrapper.toggled #sidebar-wrapper {
-  margin-left: 0;
-}
+  margin-left: 0; }
 
 @media (min-width: 768px) {
   #sidebar-wrapper {
-    margin-left: 0;
-  }
+    margin-left: 0; }
 
   #page-content-wrapper {
     min-width: 0;
-    width: 100%;
-  }
+    width: 100%; }
 
   #wrapper.toggled #sidebar-wrapper {
     margin-left: -15rem; } }
-    
-
-/*estilos de la vista registro del adulto mayor*/
-/*importando estilos*/
-
-.bg-form {
-  background-color: rgba(209, 209, 209, 0.268) !important;
-
-}
-.form-check-label{
-  font-family:'Montserrat', sans-serif;
-  font-weight:bold;
-  font-size:smaller;
-}
-label{
-  font-family:'Montserrat', sans-serif;
-  font-weight:bold;
-  font-size:medium;
-}
-h2{
-  font-family:'Montserrat', sans-serif;
-  font-size: 1.5em;
-  font-weight: bold;
-  padding-top: 4%;
-  padding-bottom: 4%;
-}
-
-.form-group{
-  font-family:'Montserrat', sans-serif;
-}
-
-.btn-secondary {
-  background-color: gray !important;
-  border-color:  rgb(111, 111, 111)  !important; 
-}
-button{
-  margin-left: 10px;
-}
-
-.list-group i{
-  font-size: 2em;
-}
-.list-group.list-group-flush a {
-  font-size: 1.2em;
-}
-
-table{
-  font-size: 1.3em;
-}
-.col-lg-4 p{
-  font-size: 1.3em;
-}
-
 
 /*# sourceMappingURL=estilos.css.map */
