--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -14,6 +14,14 @@ SOBREESCRIBIENDO  LOS ESTILOS DE BOOTSTRAP
   color: #8B2B16 !important;
 }
 
+.text-secundario {
+  color: gray;
+}
+
+.text-table {
+  font-size: 18px;
+}
+
 .btn-primary {
   background-color: #8B2B16 !important;
   border-color: #5f1d0f !important;
@@ -57,6 +65,11 @@ p {
 .boton1 {
   width: 100px;
   height: 100px;
+}
+
+.boton-inicio:hover {
+  -webkit-box-shadow: 0 0 10px #0000006b;
+          box-shadow: 0 0 10px #0000006b;
 }
 
 #wrapper {
